<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/princ"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/lay_membrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_logouny1"
                android:layout_width="40dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:contentDescription="@string/logouny"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/txt_tmembrete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/membrete" />

            <ImageView
                android:id="@+id/img_logoskynet1"
                android:layout_width="40dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/logouny" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_descrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/txt_tdescrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/descripcion" />

            <TextView
                android:id="@+id/txt_descrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="Presione el botón encender, posteriormente presione dispositivos y seleccione en el módulo Bluetooth, ya debe haberse vinculado previamente al módulo, una vez seleccionado presione Conectar" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:id="@+id/conect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/bt_op"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/idBtnOnBT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#8BC34A"
                    android:text="Encender"
                    app:iconTint="#9C27B0" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/idBtnOffBT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#E30909"
                    android:text="Apagar" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:id="@+id/conecc"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/idBtnDispBT"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_weight="0"
                    android:backgroundTint="#673AB7"
                    android:insetTop="10dp"
                    android:text="Dispositivos"
                    android:textColorHighlight="#8F2626"
                    android:textColorLink="#3F51B5"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/idSpinDisp"
                    android:layout_width="189dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:contentDescription="disp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/idBtnConect"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:backgroundTint="#673AB7"
                    android:text="Conectar"
                    android:textSize="20sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/txt_pract1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_horizontal"
                    android:text="@string/practica1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_1pract1"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/parte1" />

                <Space
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_2pract1"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/parte22" />
            </TableRow>

            <TableRow
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="133dp"/>

        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>